[metadata]
name = airflow-cyberark-secrets-backend
version = attr:airflow_cyberark_secrets_backend.__version__
description =  An Airflow custom secrets backend for CyberArk CCP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkornblum/airflow-cyberark-secrets-backend
author = Joshua Kornblum
license = MIT

[options]
packages = airflow_cyberark_secrets_backend
install_requires =
  apache-airflow >= 1.10.10,<3
python_requires = >=3.6

[options.extras_require]
dev = 
  bandit==1.7.0
  black==20.8b1
  pytest==6.2.2
  pylint==2.7.2
  safety==1.10.3
